--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -7,7 +7,7 @@
 body {
     background-color: #d9dcd6;
 }
-
+  /* all header selectors below controls the header of the page*/
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -31,7 +31,7 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
+  /* This section will control the links and their style within the header */
 .header div ul {
     list-style-type: none;
 }
@@ -50,6 +50,7 @@ p {
     font-size: 16px;
 }
 
+  /* Main cover image */
 .hero {
     height: 800px;
     width: 100%;
@@ -75,6 +76,7 @@ p {
     margin-left: 20px;
 }
 
+  /* This section controls the sidebar section */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -99,6 +101,7 @@ p {
     max-width: 150px;
 }
 
+  /* This section controls the main body style and images */
 .search-engine-optimization, .online-reputation-management, .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
@@ -117,6 +120,7 @@ p {
     font-size: 36px;
 }
 
+  /* Footer selectors */
 .footer {
     padding: 30px;
     clear: both;
